Added styling for the title

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
     </script>
 </head>
 <body>
-    <h3>Welcome to Expression Evaluator!</h3>
+    <h3 style="color: #FFFFFF">Welcome to Expression Evaluator!</h3>
     <form>
         <label>Expression :</label>
         <input type="text" id="expression" test_id="expression_input">
